# nzbench

./: README.md  pyproject.toml
src/nzbench/: __main__.py  benchmark.py
