[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nzbench"
version = "0.1.0"
description = "A Computing Architecture Benchmark Framework for Diverse Workloads"
authors = [
    { name = "Seokhun Jeon", email = "seokhun.jeon@keti.re.kr" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"

# Optional Dependencies
dependencies = [
    "transformers",
    "datasets",
    "pandas"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nzbench = "nzbench.__main__:main"